<resources>
    <string name="app_name">iHealth</string>
    <string name="title_home">Home</string>
    <string name="title_browse">Browse</string>
    <string name="title_notification">Notification</string>
    <string name="google_maps_key">AIzaSyAbJFuEdGk-OjPt2-0DrJaVYq2DC5uKI_A</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="personal_information">Personal Information</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="sex">Sex:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="edit">EDIT</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="my_location">My Location</string>
</resources>

